# rag-service-prod

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy-template.yml  deploy.yml
deployment/: config.yml
src/rag_service/: __init__.py  main.py
src/rag_service/models/: __init__.py  rag_models.py
src/rag_service/rag/: __init__.py  persona_rag_manager.py  vector_rag_manager.py
